<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginBottom="16dp"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="8dp"
        android:paddingTop="16dp"
        android:text="@string/encrypt_step_0"
        android:textColor="#444444"
        android:textSize="13sp" />

    <EditText
        android:id="@+id/encrypt_text"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="#eeeeee"
        android:gravity="top"
        android:scrollbars="none"
        android:textColor="#222222"
        android:textSize="14sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="8dp"
        android:paddingTop="16dp"
        android:text="@string/encrypt_step_1"
        android:textColor="#444444"
        android:textSize="13sp" />

    <EditText
        android:id="@+id/encrypt_text1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="#eeeeee"
        android:gravity="top"
        android:scrollbars="none"
        android:textColor="#222222"
        android:textSize="14sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="8dp"
        android:paddingTop="16dp"
        android:text="@string/encrypt_step_2"
        android:textColor="#444444"
        android:textSize="13sp" />

    <EditText
        android:id="@+id/encrypt_text2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="#eeeeee"
        android:gravity="top"
        android:scrollbars="none"
        android:textColor="#222222"
        android:textSize="14sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="8dp"
        android:paddingTop="16dp"
        android:text="@string/encrypt_step_3"
        android:textColor="#444444"
        android:textSize="13sp" />

    <EditText
        android:id="@+id/encrypt_text3"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="#eeeeee"
        android:gravity="top"
        android:scrollbars="none"
        android:textColor="#222222"
        android:textSize="14sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="8dp"
        android:paddingTop="16dp"
        android:text="@string/encrypt_step_4"
        android:textColor="#444444"
        android:textSize="13sp" />

    <EditText
        android:id="@+id/encrypt_text4"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="#eeeeee"
        android:gravity="top"
        android:scrollbars="none"
        android:textColor="#222222"
        android:textSize="14sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="8dp"
        android:paddingTop="16dp"
        android:text="@string/encrypt_step_5"
        android:textColor="#444444"
        android:textSize="13sp" />

    <EditText
        android:id="@+id/encrypt_text5"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="#eeeeee"
        android:gravity="top"
        android:scrollbars="none"
        android:textColor="#222222"
        android:textSize="14sp" />

</LinearLayout>